[metadata]
name = dpylint
version = 0.1.6
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
description = A pylint extension for analyzing python files that use the discord.py library
url = https://wasi-master.github.io/dpylint/
long_description_file = 

long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    dpylint
    dpylint.checkers
    dpylint.assets
install_requires = pylint; astroid; discord.py
python_requires = >=3.5.3

[tool:pytest]
addopts = --cov=dpylint.checkers --cov-report=html -n=auto